--- a/ControleEstoque/ViewWPF/Views/Clientes/TelaClientes.xaml
+++ b/ControleEstoque/ViewWPF/Views/Clientes/TelaClientes.xaml
@@ -1,28 +1,14 @@
-﻿<Window x:Class="ViewWPF.TelaClientes"
+﻿<Window x:Class="ViewWPF.Views.Clientes.TelaClientes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ViewWPF"
+        xmlns:local="clr-namespace:ViewWPF.Views.Clientes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TelaClientes" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Height="210" Width="396" Grid.Row="0" Grid.Column="0">
-            <Button Content="Button" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="50,20" Height="70" Width="70"/>
-
+        <StackPanel HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="792">
+            <Button x:Name="btnCadastrarClientes" Content="Cadastro" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="50,20" Height="70" Width="70" Click="btnCadastrarClientes_Click" />
         </StackPanel>
-
-
-
     </Grid>
 </Window>
