--- a/ControleEstoque/ViewWPF/MainWindow.xaml
+++ b/ControleEstoque/ViewWPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button x:Name="btnClientes" Content="Clientes" HorizontalAlignment="Left" Margin="98,54,0,0" VerticalAlignment="Top" Width="92" Height="57" Click="btnClientes_Click"/>
+
     </Grid>
 </Window>
