--- a/ControleEstoque/ViewWPF/Produtos/TelaProdutosMenu.xaml
+++ b/ControleEstoque/ViewWPF/Produtos/TelaProdutosMenu.xaml
@@ -8,18 +8,18 @@
         Title="TelaProdutosMenu" Height="450" Width="800">
     <Grid>
         <TextBlock x:Name="labelDescricao" Margin="82,125,0,0" TextWrapping="Wrap" Text="Descrição:" VerticalAlignment="Top" Width="76" HorizontalAlignment="Left" TextAlignment="Right"/>
-        <TextBox x:Name="campoDescricao" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btnCadastrarProduto" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,296,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="campoDescricao" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Descricao}"/>
+        <Button x:Name="btnCadastrarProduto" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,296,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarProduto_Click"/>
         <TextBlock x:Name="labelUn" HorizontalAlignment="Left" Margin="82,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="76" TextAlignment="Right"><Run Text="UN"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoUn" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="campoUn" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Unidade}"/>
         <TextBlock x:Name="labelPrecoVenda" HorizontalAlignment="Left" Margin="59,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Preço de Venda:"/>
-        <TextBox x:Name="campoPrecoVenda" HorizontalAlignment="Left" Height="23" Margin="163,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="campoPrecoVenda" HorizontalAlignment="Left" Height="23" Margin="163,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding PrecoVenda}"/>
         <TextBlock x:Name="labelEstoque" HorizontalAlignment="Left" Margin="82,237,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="76" TextAlignment="Right" Text="Estoque:"/>
-        <TextBox x:Name="campoEstoque" HorizontalAlignment="Left" Height="23" Margin="163,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="campoEstoque" HorizontalAlignment="Left" Height="23" Margin="163,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding EmEstoque}"/>
         <TextBlock x:Name="labelPrecoCusto" HorizontalAlignment="Left" Margin="59,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Preço de Custo:"/>
-        <TextBox x:Name="campoPrecoCusto" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="campoPrecoCusto" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding PrecoCusto}"/>
         <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"><Run Text="Cadastro de "/><Run Text="Produtos"/></TextBlock>
-
+<!--
         <TabControl x:Name="tabProdutosMenu" HorizontalAlignment="Left" Height="28" Margin="0,392,0,-1" VerticalAlignment="Top" Width="792" SelectionChanged="TabControl_SelectionChanged">
             <TabItem x:Name="tabProdutosCadastro" Header="Cadastro">
                 <Grid Background="#FFE5E5E5"/>
@@ -29,6 +29,6 @@
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
-
+-->
     </Grid>
 </Window>
