Implementando ViewModel (TelaFornecedoresMenuViewModel) / Tornando públicos os métodos da FornecedorController / Setando DataContext na View>TelaFornecedoresMenu

--- a/ControleEstoque/ViewWPF/MainWindow.xaml
+++ b/ControleEstoque/ViewWPF/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button x:Name="btnClientes" Content="Clientes" HorizontalAlignment="Left" Margin="98,54,0,0" VerticalAlignment="Top" Width="92" Height="57" Click="btnClientes_Click"/>
-        <Button x:Name="btnProdutos" Content="Produtos" HorizontalAlignment="Left" Margin="218,54,0,0" VerticalAlignment="Top" Width="92" Height="57" Click="btnProdutos_Click"/>
+        <Button x:Name="btnProdutos" Content="Produtos" HorizontalAlignment="Left" Margin="219,54,0,0" VerticalAlignment="Top" Width="92" Height="57" Click="btnProdutos_Click"/>
+        <Button x:Name="btnFornecedores" Content="Fornecedores" HorizontalAlignment="Left" Margin="98,133,0,0" VerticalAlignment="Top" Width="92" Height="57" Click="btnFornecedores_Click"/>
 
     </Grid>
 </Window>
