--- a/ControleEstoque/ViewWPF/Fornecedores/TelaFornecedoresMenu.xaml
+++ b/ControleEstoque/ViewWPF/Fornecedores/TelaFornecedoresMenu.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="ViewWPF.TelaFornecedoresMenu"
+﻿<Window x:Class="ViewWPF.Fornecedores.TelaFornecedoresMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ViewWPF"
+        xmlns:local="clr-namespace:ViewWPF.Fornecedores"
         mc:Ignorable="d"
         Title="TelaFornecedoresMenu" Height="450" Width="800">
     <Grid>
         <TextBlock x:Name="labelNome" Margin="82,125,0,0" TextWrapping="Wrap" Text="Nome:" VerticalAlignment="Top" Width="76" HorizontalAlignment="Left" TextAlignment="Right"/>
         <TextBox x:Name="campoNome" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Nome}"/>
-        <Button x:Name="btnCadastrarFornecedor" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,146,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarProduto_Click"/>
+        <Button x:Name="btnCadastrarFornecedor" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,146,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarFornecedor_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"><Run Text="Cadastro de "/><Run Text="Fornecedores"/></TextBlock>
-
     </Grid>
 </Window>
