--- a/ControleEstoque/ViewWPF/Views/TelaInventario.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaInventario.xaml
@@ -7,15 +7,26 @@
         mc:Ignorable="d"
         Title="TelaInventario" Height="450" Width="800">
     <Grid>
+        
         <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"><Run Text="Inventário"/></TextBlock>
-        
-        <TextBlock x:Name="labelProdutoId" Margin="24,121,0,0" TextWrapping="Wrap" Text="ID do produto**:" VerticalAlignment="Top" Width="109" HorizontalAlignment="Left" TextAlignment="Right" Height="23"/>
-        <TextBox x:Name="campoProdutoId" HorizontalAlignment="Left" Height="23" Margin="138,121,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Text="{Binding ProdutoId}"/>
        
-        <TextBlock x:Name="labelInventarioId" Margin="24,149,0,0" TextWrapping="Wrap" Text="ID do inventário**:" VerticalAlignment="Top" Width="109" HorizontalAlignment="Left" TextAlignment="Right" Height="23"/>
-        <TextBox x:Name="campoInvenrarioId" HorizontalAlignment="Left" Height="23" Margin="138,149,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Text="{Binding ProdutoId}"/>
+        <TextBlock x:Name="labelInventarioId" Margin="24,110,0,0" TextWrapping="Wrap" Text="ID do inventário**:" VerticalAlignment="Top" Width="109" HorizontalAlignment="Left" TextAlignment="Right" Height="23"/>
+        <TextBox x:Name="campoInventarioId" HorizontalAlignment="Left" Height="23" Margin="138,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Text="{Binding InventarioId}"/>
+
+        <TextBlock x:Name="labelProdutoId" Margin="24,138,0,0" TextWrapping="Wrap" Text="ID do produto**:" VerticalAlignment="Top" Width="109" HorizontalAlignment="Left" TextAlignment="Right" Height="23"/>
+        <TextBox x:Name="campoProdutoId" HorizontalAlignment="Left" Height="23" Margin="138,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="144" Text="{Binding ProdutoId}"/>
         
-        <!--<Button x:Name="btnBuscar" Content="Buscar" HorizontalAlignment="Left" Margin="207,177,0,0" VerticalAlignment="Top" Width="75" Click="btnBuscar_Click"/>-->
+        <Button x:Name="btnConsultar" Content="Consultar" HorizontalAlignment="Left" Margin="207,177,0,0" VerticalAlignment="Top" Width="75" Click="btnConsultar_Click"/>
+
+        <ListBox Margin="405,106,33,31">
+            <ListBoxItem Content=""/>
+            <ListBoxItem Content=""/>
+            <ListBoxItem Content=""/>
+            <ListBoxItem Content=""/>
+            <ListBoxItem Content=""/>
+        </ListBox>
+
+        <!--<TextBox x:Name="campoInventarioList" HorizontalAlignment="Left" Height="306" Margin="415,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="325"/>-->
 
     </Grid>
 </Window>
