--- a/ControleEstoque/ViewWPF/Views/TelaInventario.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaInventario.xaml
@@ -18,7 +18,7 @@
         
         <Button x:Name="btnConsultar" Content="Consultar" HorizontalAlignment="Left" Margin="207,177,0,0" VerticalAlignment="Top" Width="75" Click="btnConsultar_Click"/>
 
-        <ListBox Margin="405,106,33,31">
+        <ListBox x:Name="ListInventario" Margin="405,106,33,31">
             <ListBoxItem Content=""/>
             <ListBoxItem Content=""/>
             <ListBoxItem Content=""/>
