Implementação Vendas View / ViewModel / Controller

--- a/ControleEstoque/ViewWPF/Views/TelaVendas.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaVendas.xaml
@@ -10,32 +10,40 @@
 
         <TextBlock HorizontalAlignment="Left" Margin="20,22,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="129" Height="28" FontSize="22"><Run Text="Nov"/><Run Text="a"/><Run Text=" "/><Run Text="Venda"/></TextBlock>
 
-        <DatePicker x:Name="DatePickerDataVenda" HorizontalAlignment="Left" Margin="239,55,0,0" VerticalAlignment="Top" Width="150" RenderTransformOrigin="0.273,0.819"/>
+        <DatePicker x:Name="DatePickerDataVenda" HorizontalAlignment="Left" Margin="239,55,0,0" VerticalAlignment="Top" Width="150" RenderTransformOrigin="0.273,0.819" Text="{Binding DataVenda}"/>
 
-        <!--Cliente-->
         <TextBlock x:Name="labelCliente" Margin="21,63,0,0" TextWrapping="Wrap" Text="Cliente:" VerticalAlignment="Top" Width="48" HorizontalAlignment="Left" TextAlignment="Right" Height="16"/>
-        <ComboBox x:Name="comboCliente" HorizontalAlignment="Left" Margin="74,57,0,0" VerticalAlignment="Top" Width="150"/>
+        <ComboBox x:Name="comboCliente" HorizontalAlignment="Left" Margin="74,57,0,0" VerticalAlignment="Top" Width="150" Text="{Binding ClienteId}">
+            <ComboBoxItem Content="1"/>
+        </ComboBox>
 
         <TextBlock x:Name="labelProduto" Margin="10,149,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Produto"/><Run Text=":"/></TextBlock>
-        <ComboBox x:Name="comboProduto" HorizontalAlignment="Left" Margin="113,143,0,0" VerticalAlignment="Top" Width="150"/>
+        <ComboBox x:Name="comboProduto" HorizontalAlignment="Left" Margin="113,143,0,0" VerticalAlignment="Top" Width="150" Text="{Binding ProdutoId}">
+            <ComboBoxItem Content="1"/>
+        </ComboBox>
 
         <TextBlock x:Name="labelQuantidade" Margin="10,177,0,0" TextWrapping="Wrap" Text="Quantidade:" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"/>
-        <TextBox x:Name="campoQuantidade" HorizontalAlignment="Left" Height="23" Margin="113,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150"/>
+        <TextBox x:Name="campoQuantidade" HorizontalAlignment="Left" Height="23" Margin="113,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding Quantidade}"/>
 
         <TextBlock x:Name="labelPrecoUnitario" Margin="10,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Preço"/><Run Text=" Unitário"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoPreco" HorizontalAlignment="Left" Height="23" Margin="113,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" />
+        <TextBox x:Name="campoPreco" HorizontalAlignment="Left" Height="23" Margin="113,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding ValorUnitario}"/>
 
-        <Button x:Name="btnRegistrarVenda" Content="Registrar" HorizontalAlignment="Left" Margin="188,226,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnRegistrarVenda" Content="Registrar" HorizontalAlignment="Left" Margin="188,226,0,0" VerticalAlignment="Top" Width="75" Click="btnRegistrarVenda_Click"/>
 
-        <TextBlock x:Name="labelTotal" Margin="188,301,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" HorizontalAlignment="Left" TextAlignment="Right" FontSize="18" Height="27" FontWeight="Bold"><Run Text="Total"/><Run Text=":"/><Run Text=" R$"/></TextBlock>
-        <TextBlock x:Name="labelValorVenda" Margin="275,299,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="114" HorizontalAlignment="Left" FontSize="20" Height="27" FontWeight="Bold"><Run Text="999"/><Run Text="9999"/><Run Text=",00"/><LineBreak/><Run/></TextBlock>
+        <TextBlock x:Name="labelValorTotal" Margin="77,301,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="157" HorizontalAlignment="Left" TextAlignment="Right" FontSize="18" Height="23" FontWeight="Bold"><Run Text="Total da Venda: R$"/></TextBlock>
+        <TextBox x:Name="campoValorTotal" HorizontalAlignment="Left" Height="32" Margin="239,298,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="99999" FontSize="20" FontWeight="Bold"/>
 
-        <Button x:Name="btnConcluirVenda" Content="Concluir Venda" HorizontalAlignment="Left" Margin="292,365,0,0" VerticalAlignment="Top" Width="97" />
+        <!--<TextBlock x:Name="labelValorVenda" Margin="275,299,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="114" HorizontalAlignment="Left" FontSize="20" Height="27" FontWeight="Bold"><Run Text="999"/><Run Text="9999"/><Run Text=",00"/><LineBreak/><Run/></TextBlock>-->
+
+        <TextBlock x:Name="labelPagamento" Margin="113,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="121" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Forma de Pagamento"/><Run Text=":"/></TextBlock>
+        <ComboBox x:Name="comboPagamento" HorizontalAlignment="Left" Margin="239,338,0,0" VerticalAlignment="Top" Width="150" Text="{Binding TipoPagamento}">
+            <ComboBoxItem Content="dinheiro"/>
+        </ComboBox>
+
+        <Button x:Name="btnConcluirVenda" Content="Concluir Venda" HorizontalAlignment="Left" Margin="292,365,0,0" VerticalAlignment="Top" Width="97" Click="btnConcluirVenda_Click" />
 
         <ListBox HorizontalAlignment="Left" Height="332" Margin="418,57,0,0" VerticalAlignment="Top" Width="349"/>
-        <TextBlock HorizontalAlignment="Left" Margin="525,18,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="129" Height="28" FontSize="22" Text="Venda Atual"/>
-        <TextBlock x:Name="labelProduto_Copy" Margin="136,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Produto"/><Run Text=":"/></TextBlock>
-        <ComboBox x:Name="comboProduto_Copy" HorizontalAlignment="Left" Margin="239,338,0,0" VerticalAlignment="Top" Width="150"/>
+        <TextBlock HorizontalAlignment="Left" Margin="525,18,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="129" Height="28" FontSize="22" Text="Lista de Itens"/>
 
 
         <!--<TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" Text="Nova Venda" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"/>
