--- a/ControleEstoque/ViewWPF/Views/TelaProdutos.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaProdutos.xaml
@@ -7,25 +7,29 @@
         mc:Ignorable="d"
         Title="TelaProdutos" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
 
-        <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"><Run Text="Cadastro de "/><Run Text="Produtos"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" Height="28" FontSize="22" Grid.ColumnSpan="2"><Run Text="Cadastro de "/><Run Text="Produtos"/></TextBlock>
 
-        <TextBlock x:Name="labelCodigo" HorizontalAlignment="Left" Margin="59,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Código:"/>
-        <TextBox x:Name="campoCodigo" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Cod}"/>
+        <TextBlock x:Name="labelCodigo" HorizontalAlignment="Left" Margin="59,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Código:" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="campoCodigo" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Cod}" Grid.ColumnSpan="2"/>
 
-        <TextBlock x:Name="labelDescricao" Margin="59,153,0,0" TextWrapping="Wrap" Text="Descrição:" VerticalAlignment="Top" Width="99" HorizontalAlignment="Left" TextAlignment="Right"/>
-        <TextBox x:Name="campoDescricao" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Descricao}"/>
+        <TextBlock x:Name="labelDescricao" Margin="59,153,0,0" TextWrapping="Wrap" Text="Descrição:" VerticalAlignment="Top" Width="99" HorizontalAlignment="Left" TextAlignment="Right" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="campoDescricao" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Descricao}" Grid.ColumnSpan="2"/>
 
-        <TextBlock x:Name="labelUN" HorizontalAlignment="Left" Margin="59,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right"><Run Text="UN"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoUN" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding UN}"/>
+        <TextBlock x:Name="labelUN" HorizontalAlignment="Left" Margin="59,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Grid.ColumnSpan="2"><Run Text="UN"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="campoUN" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding UN}" Grid.ColumnSpan="2"/>
 
-        <TextBlock x:Name="labelPrecoCusto" HorizontalAlignment="Left" Margin="59,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Preço de Custo:"/>
-        <TextBox x:Name="campoPrecoCusto" HorizontalAlignment="Left" Height="23" Margin="163,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding PrecoCusto}"/>
+        <TextBlock x:Name="labelPrecoCusto" HorizontalAlignment="Left" Margin="59,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Preço de Custo:" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="campoPrecoCusto" HorizontalAlignment="Left" Height="23" Margin="163,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding PrecoCusto}" Grid.ColumnSpan="2"/>
 
-        <TextBlock x:Name="labelEstoque" HorizontalAlignment="Left" Margin="59,237,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Qntd em Estoque:"/>
-        <TextBox x:Name="campoEstoque" HorizontalAlignment="Left" Height="23" Margin="163,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Estoque}"/>
+        <TextBlock x:Name="labelEstoque" HorizontalAlignment="Left" Margin="59,237,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Qntd em Estoque:" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="campoEstoque" HorizontalAlignment="Left" Height="23" Margin="163,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Estoque}" Grid.ColumnSpan="2"/>
 
-        <Button x:Name="btnCadastrarProduto" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,258,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarProduto_Click"/>
+        <Button x:Name="btnCadastrarProduto" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,258,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarProduto_Click" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
